fixed whitespace issue

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -260,55 +260,6 @@ footer .social img {
 	height: 40px;
 }
 
-@media screen and (max-width: 900px) {
-	#hero,
-	.home-grid {
-		display: block;
-		height: auto;
-	}
-	nav,
-	footer {
-		flex-direction: column;
-	}
-	nav a {
-		display: block;
-		padding: 15px;
-	}
-	#hero {
-		margin-top: 0;
-	}
-	#hero-msg {
-		margin-top: 0;
-	}
-	#hero-msg h4 {
-		display: none;
-	}
-	#hero-msg h1 {
-		color: #6f7364;
-	}
-	.home-title {
-		font-size: 25px;
-	}
-	.rivers-card,
-	.camping-card,
-	.rapids-card {
-		margin: 50px auto;
-		width: 60%;
-	}
-	#background {
-		display: none;
-	}
-	.mountains,
-	.msg {
-		width: 80%;
-		display: block;
-		margin: 0 auto;
-	}
-	footer {
-		margin-top: 25px;
-	}
-}
-
 #hero2 {
 	display: grid;
 	grid-template-columns: 1fr 3fr 1fr;
@@ -342,12 +293,15 @@ footer .social img {
 .home-grid2 {
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
-	grid-template-rows: repeat(9, 1fr);
+	grid-gap: 50px;
+	margin-top: 50px;
+	/* grid-template-rows: repeat(9, 1fr); */
 }
 
 .card-img2 {
 	width: 100%;
-	height: 50%;
+	height: 600px;
+	/* height: 50%; */
 	border: 5px solid #08415c;
 	border-radius: 10px;
 }
@@ -378,11 +332,12 @@ footer .social img {
 	color: white;
 	grid-column: 6/10;
 	grid-row: 2/3;
-	padding: 60px 40px;
+	margin-top: 20px;
+	padding: 20px 20px 60px 20px;
 	text-align: center;
 	align-self: center;
 	width: 100%;
-	height: 75%;
+	/* height: 75%; */
 	border-radius: 10px;
 }
 
@@ -405,11 +360,11 @@ footer .social img {
 	color: white;
 	grid-column: 6/10;
 	grid-row: 5/6;
-	padding: 60px 40px;
+	padding: 20px 20px 60px 20px;
 	text-align: center;
 	align-self: center;
 	width: 100%;
-	height: 75%;
+	/* height: 75%; */
 	border-radius: 10px;
 }
 
@@ -433,11 +388,11 @@ footer .social img {
 	color: white;
 	grid-column: 6/10;
 	grid-row: 8/9;
-	padding: 60px 40px;
+	padding: 20px 20px 60px 20px;
 	text-align: center;
 	align-self: center;
 	width: 100%;
-	height: 75%;
+	/* height: 75%; */
 	border-radius: 10px;
 }
 
@@ -454,4 +409,71 @@ footer .social img {
 	text-align: center;
 	font-size: 0.9em;
 	margin: 0;
+}
+
+@media screen and (max-width: 900px) {
+	#hero,
+	.home-grid {
+		display: block;
+		height: auto;
+	}
+	nav,
+	footer {
+		flex-direction: column;
+	}
+	nav a {
+		display: block;
+		padding: 15px;
+	}
+	#hero,
+	#hero2 {
+		margin-top: 0;
+	}
+	#hero-msg #hero-msg2 {
+		margin-top: 0;
+	}
+	#hero-msg h4 {
+		display: none;
+	}
+	#hero-msg h1 {
+		color: #6f7364;
+	}
+	.home-title {
+		font-size: 25px;
+	}
+	.rivers-card,
+	.camping-card,
+	.rapids-card {
+		margin: 50px auto;
+		width: 60%;
+	}
+	.card-img2 {
+		width: 100%;
+		height: auto;
+	}
+	.idaho-card,
+	.utah-card,
+	.arizona-card {
+		margin: 50px auto;
+		width: 80%;
+	}
+	#background {
+		display: none;
+	}
+	.mountains,
+	.msg {
+		width: 80%;
+		display: block;
+		margin: 0 auto;
+	}
+	.msg1,
+	.msg2,
+	.msg3 {
+		width: 80%;
+		margin: 20px auto;
+		padding: 20px;
+	}
+	footer {
+		margin-top: 25px;
+	}
 }
